Доделал до конца эффект проклятия

--- a/src/main/resources/assets/roflmod/lang/en_us.json
+++ b/src/main/resources/assets/roflmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "block.roflmod.wood_beam": "Wood Beam",
-  "item.roflmod.bark": "Bark"
+  "item.roflmod.bark": "Bark",
+  "effect.roflmod.curse_effect": "Hollowing"
 }
